src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}


.main {
  display: flex;
  flex-direction: column;
  place-items: center;
}

.main h1 {
  font-size: 40px;
  font-weight: 700;
}

.main form {
  display: flex;
  gap: 20px;
}

.main form input {
  width: 200px;
  height: 30px;
  border-radius: 10px;
  border: 3px solid grey;
}

.main form button {
  border: 3px solid black;
  background-color: gray;
  border-radius: 10px;
  padding: 0px 20px;
  cursor: pointer;
}

.main section {
  margin-top: 40px;
  width: 300px;
}

.main section div {
  display: flex;
  justify-content: space-between;
  max-width: 100%;
  padding: 0px 10px;
  border-radius: 20px;
  gap: 30px;
  background-color: darkslategray;
  margin: 10px 0px;
}

.main section div div {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.main section div div button {
  cursor: pointer;
  border-radius: 5px;
}

